2023-03-20  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-find-workdir): New function.
	Thanks to Pascal Jäger for the idea.
	(ebuild-mode-portage-tmpdir): New custom variable.
	(ebuild-mode-map, ebuild-mode-menu): Keybinding and menu entry.

2023-02-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-process-environment): Set NO_COLOR
	in addition, see https://no-color.org/. Drop redundant test for
	XEmacs.

2023-02-27  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.62 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

2023-02-21  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-update-copyright): Call lwarn with
	nil as second argument, which works for both GNU Emacs and XEmacs.

	* ebuild-mode.el (ebuild-repo-mode): Check if coding system
	utf-8-unix exists; it doesn't in XEmacs 21.4.

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton): Call
	ebuild-mode-time-string, so that the date is in the UTC time zone.
	* glep-mode.el (glep-mode-update-last-modified)
	(glep-mode-insert-skeleton): Ditto.

	* ebuild-mode.el (ebuild-mode-time-string): New compatibility
	function for format-time-string, where XEmacs doesn't support the
	time zone argument. Bug 890933.
	(ebuild-mode-update-copyright, ebuild-mode-insert-skeleton)
	(ebuild-mode-insert-tag-line): Call it.
	(ebuild-mode-update-copyright): Save match data, because setenv
	clobbers it.

2022-12-01  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.61 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
	Regenerated.

	* ebuild-mode.el: Add documentation to some functions and
	variables.
	(ebuild-compilation-mode): Reword docstring to avoid an open paren
	at the beginning of a line, which confuses some Emacs versions.

	* ebuild-mode.el (ebuild-mode-restrict-list): Update.

2022-11-30  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (ebuild-mode): Document ebuild-mode-run-pkgdev
	and ebuild-mode-run-pkgcheck.
